# Mathmatics_simulator

./: .gitignore  MainWindowUI.py  MplCanvas.py  README.md  freeze.py  main.py  pyproject.toml  requirements.txt  run_coordinate_viewer.py
AlignmentSim/: AlignmentSimMain.py  MainWindow.ui
Coordinate/: CoordinateSystem.py
DesignPattern/: singleton_my.py
Rotation/: DirectionCosineMatrix.py
examples/: coordinate_system_basic.py
scripts/: setup_dev.py
src/mathematics_simulator/: __init__.py
src/mathematics_simulator/apps/: __init__.py  coordinate_3d_viewer.py
src/mathematics_simulator/core/: __init__.py  coordinate_system.py  rotation_matrix.py
tests/: __init__.py
tests/apps/: __init__.py
tests/core/: test_coordinate_system.py  test_rotation_matrix.py
